buf percent