@@ -27,6 +27,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
+                    <compilerArgs>
+                        --enable-preview
+                    </compilerArgs>
                     <source>14</source>
                     <target>14</target>
                 </configuration>
